--- a/src/styles.css
+++ b/src/styles.css
@@ -30,17 +30,17 @@ h1,
 h3,
 i,
 p {
-  color: #142850;
+  color: rgba(20, 40, 80, 1);
 }
 
 .active {
   cursor: default;
-  color: #142850;
+  color: rgba(20, 40, 80, 1);
 }
 
 .active:hover {
   text-decoration: none;
-  color: #142850;
+  color: rgba(20, 40, 80, 1);
 }
 
 .btn-success {
@@ -62,14 +62,16 @@ p {
 }
 
 .forecast {
-  border-radius: 10px;
-  margin: 10px;
+  padding: 6px 0px 6px 0px;
+  text-align: center;
+  border-radius: 6px;
   background: rgba(255, 255, 255, 0.4);
 }
 
-.forecast-col:hover {
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.3);
+.forecast p,
+i {
+  font-size: 18px;
+  color: rgba(20, 40, 80, 0.8);
 }
 
 .row {
@@ -80,8 +82,8 @@ p {
   font-family: "Baloo Bhaina 2", cursive;
   margin: 20px auto;
   max-width: 700px;
-  border-radius: 8px;
-  padding: 5px 10px 10px 10px;
+  border-radius: 6px;
+  padding: 6px 14px;
   background-image: linear-gradient(
     0,
     rgba(143, 211, 244, 0.9) 0%,
