--- a/src/styles.css
+++ b/src/styles.css
@@ -5,15 +5,14 @@ footer a {
 }
 
 h1 {
-  font-size: 55px;
-  font-weight: bold;
+  font-size: 45px;
   display: inline;
   line-height: 1;
 }
 
 h1 i {
-  margin: 0 15px 0 0px;
-  font-size: 35px;
+  margin: 0 10px 0 0px;
+  font-size: 30px;
 }
 
 h3 {
@@ -21,8 +20,8 @@ h3 {
 }
 
 p {
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 18px;
+  line-height: 26px;
   margin: 0 auto;
 }
 
@@ -60,8 +59,7 @@ p {
   background: rgba(255, 255, 255, 0.4);
 }
 
-.forecast p,
-i {
+.forecast i {
   font-size: 18px;
   color: rgba(20, 40, 80, 0.8);
 }
@@ -84,9 +82,9 @@ i {
 }
 
 .units {
-  position: relative;
-  top: -24px;
-  left: -5px;
+  position: absolute;
+  margin-left: 5px;
+  top: -3px;
 }
 
 .search-button {
